<resources>
    <string name="app_name">Motivation</string>
    <string name="new_phrase">NOVA FRASE</string>
    <string name="Phrases">Frases</string>
    <string name="lets_start">Vamos começar?</string>
    <string name="whats_your_name">Qual o seu nome?</string>
    <string name="save">Salvar</string>
    <string name="hello_kotlin">Olá, Kotlin!</string>
    <string name="Please_put_a_name">Por favor coloque um nome.</string>
    <string name="Hello">Olá, <b>%s</b>!</string>
</resources>