<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInterface.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8E1A82"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/image_infinity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_image_infinity"
            app:tint="@color/half_black"/>

        <ImageView
            android:id="@+id/image_smile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_smile_face"
            app:tint="@color/half_black" />

        <ImageView
            android:id="@+id/image_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_brightness"
            app:tint="@color/half_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/hello_kotlin"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_motivation_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/Phrases"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="#8E1A82"
        android:elevation="5dp" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/purple"
        android:text="@string/new_phrase"
        android:textStyle="bold" />

</LinearLayout>